Labs/Lab-1.4-Python/python-ingress-aws.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "python-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: python-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "flask-app"
              servicePort: 8080
