Labs/Lab-1.4-Python/python-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "python-ingress"
  labels:
    app: python-ingress
spec:
  backend:
    serviceName: "flask-app"
    servicePort: 8080
